# markdown-preview-tool

./: Cargo.toml  Readme.md  sample_md.md
src/: error.rs  main.rs
